--- a/Final Project/html/index.html
+++ b/Final Project/html/index.html
@@ -7,14 +7,26 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/d49d0c51e8.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
+    <div class="heading">
+        <h1>Discover Colum<span class="headingSpan">bus</span></h1>
+    </div>
         <img class="img" src="../res/Columbus_Pano_2.jpg">
         <div class="imgSrc">SkiEngineer - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=84151270</div>
-        <div class="nav">
-
+        <div class="sidenav" id="nav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa-solid fa-bars fa-2x"></i></a>
+            <a href="index.html">Home</a>
+            <a href="hotels.html">Hotels</a>
+            <a href="trans.html">Transportaion</a>
+            <a href="food.html">Food</a>
+            <a href="entertainment.html">Entertainment</a>
         </div>
+        <span onclick="openNav()"></span>
     </div>
     <div class="main">
 
