--- a/Final Project/html/index.html
+++ b/Final Project/html/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover Columbus!</title>
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <script src="https://kit.fontawesome.com/d49d0c51e8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">    <script src="https://kit.fontawesome.com/d49d0c51e8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
@@ -14,22 +13,33 @@
 <body>
     <div class="header">
     <div class="heading">
-        <h1>Discover Colum<span class="headingSpan">bus</span></h1>
+        <h1><span class="span2">Discover</span> Columb<span class="headingSpan">us</span></h1>
     </div>
         <img class="img" src="../res/Columbus_Pano_2.jpg">
         <div class="imgSrc">SkiEngineer - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=84151270</div>
-        <div class="sidenav" id="nav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa-solid fa-bars fa-2x"></i></a>
-            <a href="index.html">Home</a>
-            <a href="hotels.html">Hotels</a>
-            <a href="trans.html">Transportaion</a>
-            <a href="food.html">Food</a>
-            <a href="entertainment.html">Entertainment</a>
+        <div class="nav" id="nav">
+            <a class="btn" href="index.html"><i class="fa-solid fa-house fa-stuff"></i>Home</a>
+            <a class="btn" href="hotels.html"><i class="fa-solid fa-hotel fa-stuff"></i>Hotels</a>
+            <a class="btn" href="trans.html"><i class="bi bi-car-front-fill fa-stuff"></i>Transportaion</a>
+            <a class="btn" href="food.html"><i class="fa-solid fa-utensils fa-stuff"></i>Food</a>
+            <a class="btn" href="entertainment.html"><i class="bi bi-joystick fa-stuff"></i>Entertainment</a>
         </div>
-        <span onclick="openNav()"></span>
     </div>
     <div class="main">
-
+        <!-- talk about city including government and history of city/state -->
+        <div class="art1">
+            <h2>Columbus, The Heart Of It All</h2>
+            <p>
+                ;ldmjsfljksdehfoiusehfiusgdehbfhywerfbhjasde gfywegyud aseyfggdfyuasdgd yuas efdwq
+            </p>
+        </div>
+        <!-- talk about local legends and the urban legends -->
+        <div class="art2">
+            <h2>The Local Legends of Columbus</h2>
+            <p>
+                 f;ljkd j fhjdr gfhjsdhjfgsdhjkfgiuwehfijuewgufiuweg fiudwhbfiusdg fi
+            </p>
+        </div>
     </div>
     <div class="footer">
 
